# ZappyAI

./: .gitignore  CMakeLists.txt  README.md  ppo_model_actor.weights.h5  ppo_model_critic.weights.h5  requirements.txt  train_ai.sh
.github/workflows/: check-binary.yml  push-mirror.yml  zappy-ci.yml
Client/: agent_threads.py  client.py  config.py  constant.py  log.txt  requirements.txt  train_ppo_offline.py
Client/ai/: agent.py  fsm.py
Client/ai/strategy/: __init__.py  dqn.py  dqn_state.py  fsm.py  fsm_event.py  mcts.py  pathfinding.py  planner.py
Client/ai/strategy/Basic_ai/: Basic_ai_planner.py  fsm_planner.py
Client/ai/strategy/DQN/: dqn.py  dqn_planner.py  dqn_state.py
Client/ai/strategy/PPO/: actor.py  critic.py  ppo.py  ppo_planner.py  ppo_state.py
Client/ai/strategy/state/: _init__.py  collect_food.py  collect_resources.py  coordination_incantation.py  emergency.py  explore.py  help_incantation.py  incantation.py  prepare_incant.py  reproduction.py  wait_incantation.py
Client/protocol/: commands.py  connection.py  message_manager.py  parser.py
Client/teams/: coordination.py  message.py  message_checker.py
Client/tests/: test_connection.py  test_fsm.py
Client/utils/: game_state.py  logger.py  math.py  strategy.py  timing.py  vision.py
Data/Errors/: AError.cpp  AError.hpp  GameError.hpp  GuiError.hpp  IError.hpp  NetworkError.hpp  ParsingError.hpp  RendererError.hpp  ServerError.hpp
Data/Game/: Egg.hpp  Inventory.hpp  Map.cpp  Map.hpp  Orientation.hpp  Orientation.ipp  Player.cpp  Player.hpp  Resource.cpp  Resource.hpp  ResourceContainer.cpp  ResourceContainer.hpp  Ressource.cpp  Ressource.hpp  RessourceContainer.cpp  RessourceContainer.hpp  Tile.hpp
Data/Gui/: GuiProtocol.hpp
Doc/: protocole_communication.md
GUI/: CMakeLists.txt  zappy_gui
GUI/src/: GUI.cpp  GUI.hpp  Gui.cpp  Gui.hpp  main.cpp
GUI/src/Errors/: AError.cpp  AError.hpp  CookError.hpp  GUIError.hpp  IError.hpp  NetworkError.hpp  ParsingError.hpp
GUI/src/Game/: GameMap.cpp  GameMap.hpp  GameState.cpp  GameState.hpp  Tile.cpp  Tile.hpp
GUI/src/Network/: NetworkManager.cpp  NetworkManager.hpp  Protocol.cpp  Protocol.hpp
GUI/src/Renderer/: ARenderer.cpp  ARenderer.hpp  DebugRenderer.cpp  DebugRenderer.hpp  IRenderer.hpp  NcursesRenderer.cpp  NcursesRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
GUI/src/Renderer/Raylib/: AssetPaths.hpp  RaylibRenderer.cpp  RaylibRenderer.hpp
GUI/src/Renderer/Raylib/Assets/Basic/Resources/: deraumere.glb  linemate.glb  mendiane.glb  phiras.glb  thystame.glb
GUI/src/Renderer/Raylib/Floor/: AFloor.cpp  AFloor.hpp  IFloor.hpp
GUI/src/Renderer/Raylib/Floor/FlatFloor/: FlatFloor.cpp  FlatFloor.hpp
GUI/src/Renderer/Raylib/Floor/GlobeFloor/: GlobeFloor.cpp  GlobeFloor.hpp
GUI/src/Renderer/Raylib/Map/: Incantation.cpp  Incantation.hpp  MapRenderer.cpp  MapRenderer.hpp  Movement.hpp
GUI/src/Renderer/Raylib/Map/Floor/: AFloor.cpp  AFloor.hpp  IFloor.hpp
GUI/src/Renderer/Raylib/Map/Floor/FlatFloor/: FlatFloor.cpp  FlatFloor.hpp
GUI/src/Renderer/Raylib/Map/Floor/GlobeFloor/: GlobeFloor.cpp  GlobeFloor.hpp
GUI/src/Renderer/Raylib/Map/PlayerActions/: APlayerAction.cpp  APlayerAction.hpp  APlayerAnimAction.cpp  APlayerAnimAction.hpp  IPlayerAction.hpp  Movement.hpp  PlayerActionFactory.cpp  PlayerActionFactory.hpp  PlayerBroadcast.cpp  PlayerBroadcast.hpp  PlayerIncantation.cpp  PlayerIncantation.hpp  PlayerRotation.cpp  PlayerRotation.hpp  PlayerTranslation.cpp  PlayerTranslation.hpp
GUI/src/Renderer/Raylib/Model/: AEggModel.cpp  AEggModel.hpp  AModel.cpp  AModel.hpp  APlayerModel.cpp  APlayerModel.hpp  AResourceModel.cpp  AResourceModel.hpp  IEggModel.hpp  IModel.hpp  IPlayerModel.hpp
GUI/src/Renderer/Raylib/Model/Basic/: BasicEggModel.cpp  BasicEggModel.hpp  BasicPlayerModel.cpp  BasicPlayerModel.hpp  BasicResourceModel.cpp  BasicResourceModel.hpp
GUI/src/Renderer/Raylib/Scene/: AScene.cpp  AScene.hpp  BasicScene.cpp  BasicScene.hpp  IScene.hpp  InputManager.cpp  InputManager.hpp
GUI/src/Renderer/Raylib/Scene/Broadcast/: ABroadcastEffect.cpp  ABroadcastEffect.hpp  AEffect.hpp  BroadcastEffectFactory.cpp  BroadcastEffectFactory.hpp  EffectFactory.hpp  IBroadcastEffect.cpp  IBroadcastEffect.hpp  IEffect.hpp  WaveBroadcastEffect.cpp  WaveBroadcastEffect.hpp
GUI/src/Renderer/Raylib/Scene/Effect/: AEffect.cpp  EffectFactory.cpp  EffectFactory.hpp  IEffect.hpp
GUI/src/Renderer/Raylib/Scene/Effect/Broadcast/: ABroadcastEffect.cpp  ABroadcastEffect.hpp  WaveBroadcastEffect.cpp  WaveBroadcastEffect.hpp
GUI/src/Renderer/Raylib/Scene/Effect/Incantation/: AIncantationEffect.hpp  SpiralIncantationEffect.cpp  SpiralIncantationEffect.hpp
GUI/src/Renderer/Raylib/Scene/Incantation/: AIncantationEffect.cpp  AIncantationEffect.hpp  IIncantationEffect.hpp  IncantationEffect.hpp  IncantationEffectFactory.cpp  IncantationEffectFactory.hpp  WaveIncantationEffect.cpp  WaveIncantationEffect.hpp
Server/: CMakeLists.txt  ClientCommand.cpp  ClientCommand.hpp  ClientConnexion.cpp  Main.cpp  Player.hpp  Server.cpp  Server.hpp  main.cpp  my_macros.hpp
Server/Client/: Client.hpp
Server/Commands/: ClientCommand.cpp  ClientCommand.hpp
Server/EncapsuledFunction/: NetworkFunction.cpp  Socket.cpp  Socket.hpp
Server/Error/: Error.cpp  Error.hpp
Server/Game/: Game.cpp  Game.hpp  Turn.cpp
Server/Game/Commands/: ClientCommand.cpp  ClientCommand.hpp  GuiCommand.cpp  GuiCommand.hpp
Server/Game/Map/: Base.cpp  Map.hpp  ServerMap.hpp
Server/Game/Player/: Player.hpp  ServerPlayer.hpp
Server/Game/Teams/: ATeams.cpp  ATeams.hpp  Base.cpp  ITeams.hpp  Teams.hpp  TeamsGui.hpp  TeamsPlayer.hpp
Server/Inventory/: Inventory.cpp  Inventory.hpp  ServerInventory.cpp  ServerInventory.hpp
Server/Network/: Socket.cpp  Socket.hpp  SocketServer.cpp  SocketServer.hpp
Server/Player/: Player.hpp
Server/Server/: Base.cpp  Commands.cpp  Connexion.cpp  IObserver.hpp  Observer.cpp  Server.hpp
Utils/: Utils.cpp  Utils.hpp
src/Client/: main.py
src/GUI/: main.cpp
